squirrel_lang/src/vm/snapshots/squirrel_lang__vm__compiler__tests__compiler-edge_cases-closure_root.nut.snap
---
source: squirrel_lang/src/vm/compiler.rs
expression: actual_code
---
- code:
    - Load:
        data:
          Const: 1
        ctx:
          start: Start
          end: End
    - Set:
        Setc:
          - - 0
            - true
          - ident_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Load:
        data:
          PrimType: EmptyTable
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 0
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 3
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 1
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 4
        ctx:
          start: Start
          end: End
    - Set:
        Setf:
          - - 0
            - true
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Load:
        data:
          Reg: 0
        ctx:
          start: Start
          end: End
    - Set:
        Setc:
          - - 2
            - true
          - ident_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Load:
        data:
          PrimType: EmptyTable
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 2
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 6
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 3
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 7
        ctx:
          start: Start
          end: End
    - Set:
        Setf:
          - - 2
            - true
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Load:
        data:
          Reg: 2
        ctx:
          start: Start
          end: End
    - Set:
        Setc:
          - - 5
            - true
          - ident_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Misc:
        data: Root
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 8
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Local: 1
        ctx:
          start: Start
          end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 5
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 9
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 4
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 10
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 6
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 4
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 5
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Load:
        data:
          FunIdx: 0
        ctx:
          start: Start
          end: End
    - Set:
        Setc:
          - - 11
            - true
          - ident_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 8
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 12
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 7
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Local: 1
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 9
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 7
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 8
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Get:
        Getc:
          - 13
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Local: 2
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 14
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 11
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 15
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 10
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 16
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 12
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 10
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 11
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 14
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Local: 2
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 13
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Local: 1
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 15
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 13
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 14
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 17
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 17
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 16
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Local: 1
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 18
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 16
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 17
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Ret:
        data: Void
        ctx:
          start: Start
          end: End
  block_offsets:
    - 0
  constants:
    - String: whoami
    - String: root
    - String: a
    - String: whoami
    - String: a
    - String: b
    - String: whoami
    - String: b
    - String: print
    - String: setroottable
    - String: b
    - String: show_root
    - String: show_root
    - String: show_root
    - String: show_root
    - String: setroot
    - String: a
    - String: show_root
  is_varargs: true
  num_regs: 19
  num_params: 0
  locals:
    - NamedReg:
        - 0
        - vargv
    - NamedReg:
        - 1
        - print
    - NamedReg:
        - 2
        - sr
  num_locals: 0
