squirrel_lang/src/vm/snapshots/squirrel_lang__vm__compiler__tests__compiler-edge_cases-closure_this.nut.snap
---
source: squirrel_lang/src/vm/compiler.rs
expression: actual_code
---
- code:
    - Load:
        data:
          FunIdx: 0
        ctx:
          start: Start
          end: End
    - Set:
        Setc:
          - - 0
            - true
          - ident_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Load:
        data:
          Const: 2
        ctx:
          start: Start
          end: End
    - Set:
        Setc:
          - - 1
            - true
          - ident_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Load:
        data:
          PrimType: EmptyTable
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 0
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 4
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 1
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 5
        ctx:
          start: Start
          end: End
    - Set:
        Setf:
          - - 0
            - true
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Load:
        data:
          Const: 6
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 1
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 7
          - ident_span:
              start: Start
              end: End
    - Set:
        Setf:
          - - 0
            - true
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Load:
        data:
          Reg: 0
        ctx:
          start: Start
          end: End
    - Set:
        Setc:
          - - 3
            - true
          - ident_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Get:
        Getc:
          - 8
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Local: 1
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 10
          - ident_span:
              start: Start
              end: End
    - Get:
        Getfc:
          - 9
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Local: 2
        ctx:
          start: Start
          end: End
    - Misc:
        data: Root
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 3
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 11
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 2
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 12
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 4
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 2
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 3
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 6
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 13
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 5
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 5
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 6
          n_args: 0
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args: []
    - Get:
        Getc:
          - 14
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 7
        ctx:
          start: Start
          end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 10
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 15
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 9
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 9
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 10
          n_args: 0
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args: []
    - Store:
        data:
          Reg: 8
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 7
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 8
          n_args: 0
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args: []
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 12
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Local: 1
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 11
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 11
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 12
          n_args: 0
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args: []
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 14
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Local: 2
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 13
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 13
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 14
          n_args: 0
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args: []
    - Misc:
        data: Root
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 16
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 16
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 15
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 17
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 17
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 15
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 16
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Get:
        Getc:
          - 18
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 19
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 19
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 18
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 18
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 19
          n_args: 0
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args: []
    - Get:
        Getc:
          - 20
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 20
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 21
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 21
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 20
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 21
          n_args: 0
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args: []
    - Load:
        data:
          Local: 1
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 22
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 22
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 23
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 22
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 23
          n_args: 0
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args: []
    - Ret:
        data: Void
        ctx:
          start: Start
          end: End
  block_offsets:
    - 0
  constants:
    - String: show_this
    - String: whoami
    - String: root
    - String: a
    - String: whoami
    - String: a
    - String: show_this
    - String: show_this
    - String: show_this
    - String: show_this
    - String: a
    - String: print
    - String: "-- Should be root --\n"
    - String: show_this
    - String: show_this
    - String: getroottable
    - String: print
    - String: "-- Should be a --\n"
    - String: a
    - String: show_this
    - String: show_this
    - String: a
    - String: a
  is_varargs: true
  num_regs: 24
  num_params: 0
  locals:
    - NamedReg:
        - 0
        - vargv
    - NamedReg:
        - 1
        - st
    - NamedReg:
        - 2
        - st2
  num_locals: 0
