squirrel_lang/src/vm/snapshots/squirrel_lang__vm__compiler__tests__compiler-squirrel_repo-regex.nut.snap
---
source: squirrel_lang/src/vm/compiler.rs
expression: actual_code
---
- code:
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 1
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 0
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 0
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 1
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 2
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 0
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 1
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Store:
        data:
          Local: 1
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 2
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Local: 2
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Local: 1
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 4
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 3
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 3
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Local: 2
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 5
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 3
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 4
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Store:
        data:
          Local: 3
        ctx:
          start: Start
          end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 7
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 4
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 6
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Local: 2
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 10
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 5
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 9
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Local: 3
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 6
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 11
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Local: 3
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 7
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 12
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 9
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 10
          n_args: 2
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
            - start: Start
              end: End
    - Store:
        data:
          Reg: 8
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 6
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 7
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 14
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 8
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 13
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 9
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 15
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 13
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 14
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 17
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 10
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 16
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 11
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 18
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 16
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 17
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Store:
        data:
          Local: 1
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 12
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Local: 2
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Local: 1
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 20
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 13
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 19
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Local: 2
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 21
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 19
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 20
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Store:
        data:
          Local: 3
        ctx:
          start: Start
          end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 23
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 14
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 22
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Local: 2
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 26
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 15
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 25
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Local: 3
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 16
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 27
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Local: 3
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 17
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 28
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 25
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 26
          n_args: 2
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
            - start: Start
              end: End
    - Store:
        data:
          Reg: 24
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 22
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 23
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 30
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 18
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 29
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 19
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 31
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 29
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 30
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Ret:
        data: Void
        ctx:
          start: Start
          end: End
  block_offsets:
    - 0
  constants:
    - String: regexp
    - String: "[a-zA-Z]+"
    - String: 123 Test; strlen(str);
    - String: search
    - String: print
    - String: slice
    - String: begin
    - String: end
    - String: print
    - String: "\n"
    - String: regexp
    - String: "\\m()"
    - String: "123 Test; doSomething(str, getTemp(), (a+(b/c)));"
    - String: search
    - String: print
    - String: slice
    - String: begin
    - String: end
    - String: print
    - String: "\n"
  is_varargs: true
  num_regs: 32
  num_params: 0
  locals:
    - - vargv
      - 0
    - - ex
      - 1
    - - string
      - 2
    - - res
      - 3
  num_locals: 4
